--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url("assets/background.jpg") no-repeat center center fixed;
+  background: url(0c1b8af1be802758e487359747dd14e8.webp) no-repeat center center fixed;
   background-size: cover;
   color: #fff;
 }
